--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hoaaah/yii2-startbootstrap-agency",
-    "description": "This extensions is library for Startbootstrap Stylish-Portofolio Themes",
+    "description": "This extensions is library for Startbootstrap Agency Themes",
     "type": "library",
     "keywords": ["yii2","extension","startbootstrap","agency","design","onepage"],
     "license": "MIT",
